--- a/SomeToyProject/TwitterClone/app/src/main/res/values/strings.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TwitterClone</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">password</string>
 </resources>
