--- a/SomeToyProject/TwitterClone/app/src/main/res/values/strings.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TwitterClone</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">password</string>
+    <string name="button_login">login</string>
+    <string name="text_signup">No account? Go to signup</string>
 </resources>
